스터디룸 DB 진행중(1)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">studyproject</string>
+    <string name="studycategory">스터디룸의 카테고리를 설정해주세요</string>
 
 </resources>
