--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">studyproject</string>
     <string name="studycategory">스터디룸의 카테고리를 설정해주세요</string>
+    <string name="studybutton">스터디 개설</string>
 
 </resources>
