--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">studyproject</string>
     <string name="studycategory">스터디룸의 카테고리를 설정해주세요</string>
     <string name="studybutton">스터디 개설</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
